--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,207 +1,14 @@
-$color-primary: #55c57a;
-$color-primary-light: #7ed56f;
-$color-primary-dark: #28b485;
-$color-grey-dark: #777;
-$color-white: #fff;
+@import "base/base";
+@import "base/utilities";
+@import "base/animations";
+@import "base/typography";
 
-/*Animation text come from the left to right back to center*/
-@keyframes leftToRightAnimation {
-  0% {
-    opacity: 0;
-    transform: translateX(-15rem);
-  }
-  80% {
-    transform: translateX(2rem);
-  }
-  100% {
-    transform: translateX(0);
-    opacity: 1;
-  }
-}
-/*Animation text come from the right to left back to center*/
-@keyframes rightToLeftAnimation {
-  0% {
-    opacity: 0;
-    transform: translateX(15rem);
-  }
-  80% {
-    transform: translateX(-2rem);
-  }
-  100% {
-    transform: translateX(0);
-    opacity: 1;
-  }
-}
+@import "abstracts/functions";
+@import "abstracts/variables";
+@import "abstracts/mixins";
 
-@keyframes moveInBottom {
-  0% {
-    opacity: 0;
-    transform: translateY(3rem);
-  }
+@import "components/button";
 
-  100% {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
+@import "layout/header";
 
-*,
-*::before,
-*::after {
-  padding: 0;
-  margin: 0;
-  box-sizing: inherit;
-}
-
-html {
-  /*
-      rem values are relative to the root html element, 
-      not to the parent element. That is, 
-      If font-size of the root element is 16px then 1 rem = 16px 
-      for all elements. If font-size is not explicitly 
-      defined in root element then 1rem will be equal to the default 
-      font-size provided by the browser (usually 16px).
-      */
-  font-size: 62.5%;
-  /*font-size: 10px; The same result*/
-}
-
-body {
-  font-family: "Lato", sans-serif;
-  font-weight: 400;
-  font-size: 1.6rem;
-  line-height: 1.7;
-  color: $color-grey-dark;
-  padding: 3rem;
-  box-sizing: border-box;
-}
-header {
-  height: 90vh;
-  /*Set bg ontop of the image*/
-  background-image: linear-gradient(
-      to right bottom,
-      rgba($color-primary-light, 0.8),
-      rgba($color-primary-dark, 0.8)
-    ),
-    url("../img/hero-my.jpg");
-  background-size: cover;
-  background-position: center;
-  position: relative;
-
-  /*Clip the image to the giivven polygon*/
-  clip-path: polygon(0 0, 100% 0, 100% 80%, 0% 100%);
-}
-
-.header__logo-box {
-  position: absolute;
-  top: 3.5rem;
-  left: 3.5rem;
-}
-
-.header__logo {
-  height: 5rem;
-}
-
-.header__text-box {
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  /*Make the text center */
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-.heading-primary {
-  color: $color-white;
-  text-transform: uppercase;
-  margin-bottom: 6rem;
-
-  /*Fix animation jumping bug*/
-  backface-visibility: hidden;
-}
-.heading-primary--main {
-  display: block;
-  font-weight: 400;
-  font-size: 6rem;
-  letter-spacing: 3.5rem;
-
-  animation: leftToRightAnimation 1s ease-in;
-  /* animation-duration: 1s;
-    animation-timing-function: ease-in; */
-  /* animation-fill-mode: backwards; */
-}
-.heading-primary--sub {
-  display: block;
-  font-weight: 700;
-  font-size: 2rem;
-  letter-spacing: 1.7rem;
-
-  animation: rightToLeftAnimation 1s ease-in;
-  /* animation-duration: 1s;
-    animation-timing-function: ease-in; */
-}
-
-.btn,
-.btn:link,
-.btn:visited {
-  text-decoration: none;
-  text-transform: uppercase;
-  padding: 1.5rem 4rem;
-  border-radius: 10rem;
-  font-size: 1.6rem;
-  border: none;
-  cursor: pointer;
-  display: inline-block;
-  transition: all 0.2s;
-
-  position: relative;
-
-  /* transition: all 0.2s */
-}
-
-.btn:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
-}
-
-.btn:active,
-.btn:focus {
-  outline: none;
-  transform: translateY(-1px);
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
-}
-
-.btn--white {
-  color: $color-grey-dark;
-  background-color: $color-white;
-}
-.btn--green {
-  color: #55c57a;
-  background-color: #000;
-}
-
-.btn--animated {
-  animation: moveInBottom 0.5s ease-out 0.75s;
-  animation-fill-mode: backwards;
-}
-
-.btn::after {
-  content: "";
-  display: inline-block;
-  height: 100%;
-  width: 100%;
-  border-radius: 10rem;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  transition: all 0.4s;
-}
-
-.btn:hover::after {
-  transform: scaleX(1.4) scaleY(1.6);
-  opacity: 0;
-}
-
-.btn--white::after {
-  background-color: $color-white;
-}
+@import "pages/home";
