--- a/css/style.css
+++ b/css/style.css
@@ -130,9 +130,9 @@ body {
 .header {
   height: 90vh;
   /*Set bg ontop of the image*/
-  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../img/hero-my.jpg");
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.6), rgba(40, 180, 133, 0.6)), url("../img/hero-my.jpg");
   background-size: cover;
-  background-position: center;
+  background-position: top;
   position: relative;
   /*Clip the image to the giivven polygon*/
   clip-path: polygon(0 0, 100% 0, 100% 80%, 0% 100%); }
