--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -5,7 +5,7 @@
       text-transform: uppercase;
       padding: 1.5rem 4rem;
       border-radius: 10rem;
-      font-size: 1.6rem;
+      font-size: $default-font-size;
       border: none;
       cursor: pointer;
       display: inline-block;
@@ -64,3 +64,26 @@
     }
   }
   
+
+  .btn-text{
+    &:link, 
+    &:visited{
+      font-size: $default-font-size;
+      color: $color-primary;
+      display: inline-block;
+      text-decoration: none;
+      border-bottom: 1px solid $color-primary;
+      transition: all .2s;
+    }
+    &:hover{
+      padding: .5rem;
+      color : $color-white;
+      background-color: $color-primary;
+      box-shadow: 0 1rem 2rem rgba($color-black,.15);
+      transform: translateY(-2px);
+    }
+    &:active{
+      box-shadow: 0 .5rem 1rem rgba($color-black,.15);
+      transform: translateY(0);
+    }
+  }
