--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,7 +8,9 @@
 @import "abstracts/mixins";
 
 @import "components/button";
+@import "components/composition";
 
 @import "layout/header";
+@import "layout/grid";
 
 @import "pages/home";
