--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,43 +1,73 @@
 @import "../abstracts/variables";
 
 body {
-    font-family: "Lato", sans-serif;
-    font-weight: 400;
-    font-size: 1.6rem;
-    line-height: 1.7;
-    color: $color-grey-dark;
-    padding: 3rem;
-  }
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 1.7;
+  color: $color-grey-dark;
+  padding: 3rem;
+}
 
 .heading-primary {
-    color: $color-white;
-    text-transform: uppercase;
-    margin-bottom: 6rem;
-  
-    /*Fix animation jumping bug*/
-    backface-visibility: hidden;
-  
-    &--main {
-      display: block;
-      font-weight: 400;
-      font-size: 6rem;
-      letter-spacing: 3.5rem;
-  
-      animation: leftToRightAnimation 1s ease-in;
-      // animation-duration: 1s;
-      // animation-timing-function: ease-in;
-      // animation-fill-mode: backwards;
-    }
-  
-    &--sub {
-      display: block;
-      font-weight: 700;
-      font-size: 2rem;
-      letter-spacing: 1.7rem;
-  
-      animation: rightToLeftAnimation 1s ease-in;
-      //animation-duration: 1s;
-      //animation-timing-function: ease-in;
-    }
+  color: $color-white;
+  text-transform: uppercase;
+  margin-bottom: 6rem;
+
+  /*Fix animation jumping bug*/
+  backface-visibility: hidden;
+
+  &--main {
+    display: block;
+    font-weight: 400;
+    font-size: 6rem;
+    letter-spacing: 3.5rem;
+
+    animation: leftToRightAnimation 1s ease-in;
+    // animation-duration: 1s;
+    // animation-timing-function: ease-in;
+    // animation-fill-mode: backwards;
   }
-  
+
+  &--sub {
+    display: block;
+    font-weight: 700;
+    font-size: 2rem;
+    letter-spacing: 1.7rem;
+
+    animation: rightToLeftAnimation 1s ease-in;
+    //animation-duration: 1s;
+    //animation-timing-function: ease-in;
+  }
+}
+
+.heading-secondary {
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  background-image: linear-gradient(
+    to right,
+    $color-primary-light,
+    $color-primary-dark
+  );
+  display: inline-block; // set the size of the H2 to be just the text
+  -webkit-background-clip: text; // Clip the bg to the text
+  color: transparent;
+  letter-spacing: 2px;
+  transition: all 0.2s;
+  &:hover {
+    transform: skewY(2deg) skewX(15deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem rgba($color-black, 0.2);
+  }
+}
+.heading-tertiary{
+  font-size: $default-font-size;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+.paragraph{
+  font-size: $default-font-size;
+  &:not(:last-child){
+    margin-bottom: 3rem;
+  }
+}
