--- a/css/style.css
+++ b/css/style.css
@@ -212,6 +212,23 @@ body {
   .composition:hover .composition__photo:not(:hover) {
     transform: scale(0.9); }
 
+.feature-box {
+  background-color: rgba(255, 255, 255, 0.8);
+  font-size: 1.6rem;
+  text-align: center;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+  padding: 2.5rem;
+  transition: transform 0.2s; }
+  .feature-box__icon {
+    background-image: linear-gradient(to right, #7ed56f, #28b485);
+    color: transparent;
+    -webkit-background-clip: text;
+    font-size: 6rem;
+    margin-bottom: 0.5rem; }
+  .feature-box:hover {
+    transform: translateY(-1.5rem) scale(1.1); }
+
 .header {
   height: 90vh;
   /*Set bg ontop of the image*/
@@ -267,3 +284,13 @@ body {
   background-color: #f7f7f7;
   padding: 25rem 0;
   margin-top: -20vh; }
+
+.section-features {
+  padding: 20rem 0;
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../img/nat-4.jpg");
+  background-size: cover;
+  background-position: top;
+  transform: skewY(-7deg);
+  margin-top: -11.4rem; }
+  .section-features > * {
+    transform: skewY(7deg); }
