--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -1,6 +1,6 @@
 .feature-box {
   background-color: rgba($color-white, 0.8);
-  font-size: $default-font-size;
+  font-size: 1.5rem;
   text-align: center;
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
@@ -19,6 +19,6 @@
     margin-bottom: 0.5rem;
   }
   &:hover {
-    transform: translateY(-1.5rem) scale(1.1);
+    transform: translateY(-1.5rem) scale(1.05);
   }
 }
