--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -22,3 +22,10 @@
   //   margin-top: -15.4rem;
   //   clip-path: polygon(0 20%, 100% 0%, 100% 80%, 0% 100%);
 }
+
+.section-tours {
+  background-color: $color-grey-light-1;
+  padding: 25rem 0 50rem 0;
+  margin-top: -11rem;
+  // margin-top: -20vh;
+}
