--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -76,14 +76,14 @@
       transition: all .2s;
     }
     &:hover{
-      padding: .5rem;
+      padding: 0 1rem ;
       color : $color-white;
       background-color: $color-primary;
       box-shadow: 0 1rem 2rem rgba($color-black,.15);
       transform: translateY(-2px);
     }
     &:active{
-      box-shadow: 0 .5rem 1rem rgba($color-black,.15);
+      box-shadow: 0 .75rem 1rem rgba($color-black,.15);
       transform: translateY(0);
     }
   }
