--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -25,7 +25,12 @@
 
 .section-tours {
   background-color: $color-grey-light-1;
-  padding: 25rem 0 50rem 0;
+  padding: 25rem 0 15rem 0;
   margin-top: -11rem;
-  // margin-top: -20vh;
+}
+.section-stories{
+  background-color: $color-grey-light-1;
+  padding: 15rem 0;
+  margin-top: -15rem;
+
 }
