--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,7 @@
 @import "abstracts/variables";
 @import "abstracts/mixins";
 
+@import "components/bg-video";
 @import "components/button";
 @import "components/composition";
 @import "components/feature-box";
