--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -29,8 +29,8 @@
   margin-top: -11rem;
 }
 .section-stories{
-  background-color: $color-grey-light-1;
+  // background-color: $color-grey-light-1;
   padding: 15rem 0;
-  margin-top: -15rem;
-
+  // margin-top: -15rem;
+ position: relative;
 }
