--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -147,10 +147,7 @@
   }
   // Back side styling
   &__cta {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    @include absCenter;
     width: 80%;
     text-align: center;
 
