--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,33 +1,35 @@
-
 .header {
-    height: 90vh;
-    /*Set bg ontop of the image*/
-    background-image: linear-gradient(
-        to right bottom,
-        rgba($color-primary-light, 0.6),
-        rgba($color-primary-dark, 0.6)
-      ),
-      url("../img/hero-my.jpg");
-    background-size: cover;
-    background-position: top;
-    position: relative;
-  
-    /*Clip the image to the giivven polygon*/
-    clip-path: polygon(0 0, 100% 0, 100% 80%, 0% 100%);
-  
-    &__logo-box {
-      position: absolute;
-      top: 3.5rem;
-      left: 3.5rem;
-    }
-    &__logo {
-      height: 5rem;
-    }
-    &__text-box {
-      @include absCenter;
-      top: 40%;
+  height: 90vh;
+  /*Set bg ontop of the image*/
+  background-image: linear-gradient(
+      to right bottom,
+      rgba($color-primary-light, 0.6),
+      rgba($color-primary-dark, 0.6)
+    ),
+    url("../img/hero-my.jpg");
+  background-size: cover;
+  background-position: top;
+  position: relative;
 
-      text-align: center;
-    }
+  /*Clip the image to the giivven polygon*/
+  clip-path: polygon(0 0, 100% 0, 100% 80%, 0% 100%);
+
+  @include respond(phone) {
+    clip-path: polygon(0 0, 100% 0, 100% 90%, 0% 100%);
   }
-  
+
+  &__logo-box {
+    position: absolute;
+    top: 3.5rem;
+    left: 3.5rem;
+  }
+  &__logo {
+    height: 5rem;
+  }
+  &__text-box {
+    @include absCenter;
+    top: 40%;
+
+    text-align: center;
+  }
+}
