--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -26,6 +26,7 @@ $default-font-size : 1.6rem;
 // GRID
 $grid-width : 130rem;
 $gutter-vertical : 8rem;
+$gutter-vertical-small: 6rem;
 $gutter-horizontal : 6rem;
 
 
