--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -6,7 +6,6 @@ body {
   font-size: 1.6rem;
   line-height: 1.7;
   color: $color-grey-dark;
-  padding: 2rem;
 }
 
 .heading-primary {
@@ -27,6 +26,11 @@ body {
     // animation-duration: 1s;
     // animation-timing-function: ease-in;
     // animation-fill-mode: backwards;
+
+    @include respond(phone) {
+      letter-spacing: 1rem;
+      font-size: 4rem;
+    }
   }
 
   &--sub {
@@ -38,6 +42,11 @@ body {
     animation: rightToLeftAnimation 1s ease-in;
     //animation-duration: 1s;
     //animation-timing-function: ease-in;
+
+    @include respond(phone) {
+      letter-spacing: .5rem;
+      font-size: 1.5rem;
+    }
   }
 }
 
@@ -55,19 +64,27 @@ body {
   color: transparent;
   letter-spacing: 2px;
   transition: all 0.2s;
+
+  @include respond(tab-port) {
+    font-size: 3rem;
+  }
+  @include respond(phone) {
+    font-size: 2.5rem;
+  }
+
   &:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
     text-shadow: 0.5rem 1rem 2rem rgba($color-black, 0.2);
   }
 }
-.heading-tertiary{
+.heading-tertiary {
   font-size: $default-font-size;
   font-weight: 700;
   text-transform: uppercase;
 }
-.paragraph{
+.paragraph {
   font-size: $default-font-size;
-  &:not(:last-child){
+  &:not(:last-child) {
     margin-bottom: 3rem;
   }
 }
