--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -1,10 +1,29 @@
-.u-center-text{text-align: center;}
-.u-margin-bottom-small {margin-bottom: 1.5rem;}
-.u-margin-bottom-medium {margin-bottom: 4rem;}
-.u-margin-bottom-big {margin-bottom: 8rem;}
+.u-center-text {
+  text-align: center;
+}
+.u-margin-bottom-small {
+  margin-bottom: 1.5rem;
+}
+.u-margin-bottom-medium {
+  margin-bottom: 4rem;
+  @include respond(tab-port) {
+    margin-bottom: 3rem !important;
+  }
+}
+.u-margin-bottom-big {
+  margin-bottom: 8rem;
+  @include respond(tab-port) {
+    margin-bottom: 5rem !important;
+  }
+}
 
-.u-margin-top-big {margin-top: 8rem;}
-.u-margin-top-huge {margin-top: 12rem;}
+.u-margin-top-big {
+  margin-top: 8rem;
+}
+.u-margin-top-huge {
+  margin-top: 12rem;
+}
 
-.u-center-text{text-align: center;}
-
+.u-center-text {
+  text-align: center;
+}
