--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -150,19 +150,62 @@
     @include absCenter;
     width: 80%;
     text-align: center;
-
   }
-  &__price-box{
+  &__price-box {
     margin-bottom: 8rem;
     text-align: center;
-    color:  $color-white;
+    color: $color-white;
   }
-  &__price-only{
+  &__price-only {
     font-size: 1.4rem;
     text-transform: uppercase;
   }
-  &__price-value{
+  &__price-value {
     font-size: 6rem;
     font-weight: 200;
+  }
+
+  @include respond(tab-port) {
+    height: auto;
+    border-radius: 3px;
+    background-color: $color-white;
+    box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
+
+    &__side {
+      height: auto;
+      position: relative;
+      box-shadow: none;
+
+      &--back {
+        transform: rotateY(0);
+        clip-path: polygon(0 15%, 100% 0, 100% 100%, 0% 100%);
+      }
+    }
+
+    &:hover &__side--front {
+      transform: rotateY(0);
+    }
+
+    &__details {
+      padding: 1rem 3rem;
+    }
+
+    // FRONT SIDE STYLING
+    &__cta {
+      position: relative;
+      top: 0%;
+      left: 0;
+      transform: translate(0);
+      width: 100%;
+      padding: 7rem 4rem 4rem 4rem;
+    }
+
+    &__price-box {
+      margin-bottom: 3rem;
+    }
+
+    &__price-value {
+      font-size: 4rem;
+    }
   }
 }
