--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -1,10 +1,19 @@
 .row {
   max-width: $grid-width;
-//   background-color: #eee;
+  //   background-color: #eee;
   margin: 0 auto; //center the content
 
   &:not(:last-child) {
     margin-bottom: $gutter-vertical;
+
+    @include respond(tab-port) {
+      margin-bottom: $gutter-vertical-small;
+    }
+  }
+
+  @include respond(tab-port) {
+    max-width: 50rem;
+    padding: 0 3rem;
   }
 
   @include clearfix;
@@ -16,6 +25,14 @@
 
     &:not(:last-child) {
       margin-right: $gutter-horizontal;
+
+      @include respond(tab-port) {
+        margin-right: 0;
+        margin-bottom: $gutter-vertical-small;
+      }
+    }
+    @include respond(tab-port) {
+      width: 100% !important;
     }
   }
 
@@ -47,7 +64,8 @@
 
   .col-3-of-4 {
     width: calc(
-      ((100% - (3 * #{$gutter-horizontal})) / 4) * 3 + (2*#{$gutter-horizontal})
+      ((100% - (3 * #{$gutter-horizontal})) / 4) * 3 +
+        (2 *#{$gutter-horizontal})
     );
   }
 
