add script to merge and minify, result minify style.css

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -6,10 +6,21 @@
       rgba($color-primary-light, 0.6),
       rgba($color-primary-dark, 0.6)
     ),
-    url("../img/hero-my.jpg");
+    url("../img/hero-small-my.jpg");
   background-size: cover;
   background-position: top;
   position: relative;
+
+  @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
+    only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
+    only screen and (min-width: 125em) {
+    background-image: linear-gradient(
+        to right bottom,
+        rgba($color-primary-light, 0.8),
+        rgba($color-primary-dark, 0.8)
+      ),
+      url(../img/hero-my.jpg);
+  }
 
   /*Clip the image to the giivven polygon*/
   clip-path: polygon(0 0, 100% 0, 100% 80%, 0% 100%);
